# Monaris

./: .gitignore  LICENSE  Monaris.cabal  Monaris.hs  README.markdown  cabal.project  stack.yaml.sample
